--- a/P4Ppages/P4P10.html
+++ b/P4Ppages/P4P10.html
@@ -18,14 +18,15 @@
             <a href="../about.html">Infosivu</a>
             <a href="../history.html">Historia</a>
             <a href="../ranking.html">P4P ranking</a>
+            <a href="../results.html">Tulokset</a>
         </nav>
     </header>
 
     <section class="fighter-profile">
         <div class="fighter-header">
-            <img src="../Kuvat/Asse.png" alt="Fighter Image" class="fighter-image">
+            <img src="../Kuvat/Heikki.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
-                <h2>Asse Immonen</h2>
+                <h2>Heikki Lintula</h2>
                 <h2>Golf Division</h2>
                 <p>25-1-0 (W-L-D)</p>
                 <div class="record">
