--- a/P4Ppages/P4P7.html
+++ b/P4Ppages/P4P7.html
@@ -18,6 +18,7 @@
             <a href="../about.html">Infosivu</a>
             <a href="../history.html">Historia</a>
             <a href="../ranking.html">P4P ranking</a>
+            <a href="../results.html">Tulokset</a>
         </nav>
     </header>
 
