--- a/history.html
+++ b/history.html
@@ -45,14 +45,15 @@
             <h2>2022 Emperor Engströmin aikakausi</h2>
             </div>
             <p>Dokathlon saapui ensimmäistä kertaa nykymuodossaan Casa Winterroadile, jossa myös antiikin ajan kilpailut järjestettiin. Kilpailun toisena vuonna historiallinen Dokathlon laajensi kilpailijoiden määrää saavutettuaan massiivista suosiota edeltävänä vuotena. Karsintoja tapahtumaan järjestettiin ympäri vuoden ja tuhansista hakijoista karsiutui 11 rautaista haastaja. Karsintojen häkellyttävin suoritus tapahtui, kun Elias "Espoon Bateman" Leikkonen nappasi oman paikkansa päästämällä 25 ihmistä naamaVIP:illään Kalleen, joka jälkeen hän karsi yhden kilpailijansa heittämällä hänet ulos portsarien saattelemana. </p>
-            <p>Dokathlonin jälkeen </p>
+            <p>Rapujuhlat ja palkintojenjako kruunasivat juhlavan illan huikeilla seremonioillaan, herkistävillä puheilla ja messevillä tarjoiluilla. Vaikka vuoden Dokathlon saatiinkin  päätökseen, ei urheilujuhlan vaikutus lähiyhteisöön loppunut. Dokathlonin jälkeisenä sunnuntaina nähtiin Dokathlonin historian suurin hyväntekeväisyysstuntti. Kilpailun vuoden isäntä kosketti lähialueiden yhteisöjä lahjoittamalla 33 hampurilaista Lahden asukkaille.  </p>
         </div>
         <div class="content">
             <div class="headerhis">
                 <img src="Kuvat/history3.jpg" alt="historiakuva 3" class="history1">
                 <h2>2023 Paluu juurille ja Talvitie dynastian synty</h2>
                 </div>
-                <p></p>
+                <p>Sanotaan, että hyvä viini paranee ajan kanssa ja tämä sääntö näyttää pätevän myös urheilujuhliin. Dokathlon palasi alkusijoilleen kolmantena vuotenaan ja kilpailun taso oli historian korkein. Vuolenkosken sheriffin äkillisen katoamisen takia, paikallisen poliisin kanssa yhteisymmärryksessä tapahtuman kokoa supistettiin turvallisuussyistä. Kilpailun pienempi koko ei kuitenkaan tarkoittanut, että kilpailun taso putoaisi. </p>
+            </p>Vuoden 2023 dokathlon olikin historian tasaisin. Voittaja selvisikin vasta viimeisessä lajissa. Koko kilpailun altavastaajan asemassa ollut Veikko Talvitie kipusi viimeisten lajien aikana muutaman pisteen päähän Juho Säteestä, joka oli pitänyt kärkipaikaa suuren osan kilpalusta. Viimeisessä lajissa Talvitie jätti kaiken pelikentälle ja voitti Säteen. Tilanne oli kuitenkin niin tasainen, että viimeisen lajin jälkeen voittaja ei vielä ollut selvillä ja IDSC joutui suorittamaan pisteiden uudelleenlaskun. Uudelleenlasku varmisti Talviten uskomattoman nousun Dokathlonin uudeksi mestariksi.</p>
             </div>
     </div>
     <footer>
