--- a/results.html
+++ b/results.html
@@ -44,7 +44,7 @@
                         <tr>
                             <th>Osallistuja</th>
             
-                            <th>Bilis</th>
+                            <th>Biljardi</th>
                             <th>Draiverin heitto</th>
                             <th>Flipcup</th>
                             <th>Mölkky</th>
