--- a/P4Ppages/P4P6.html
+++ b/P4Ppages/P4P6.html
@@ -24,18 +24,18 @@
 
     <section class="fighter-profile">
         <div class="fighter-header">
-            <img src="../Kuvat/Joni.png" alt="Fighter Image" class="fighter-image">
+            <img src="../Kuvat/Alvar.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
-                <h2>Joni Pihlman</h2>
+                <h2>Alvar Huotari</h2>
                 <h2></h2>
-                <p>25-1-0 (W-L-D)</p>
+                <p>20-0-0 (W-L-D) (Undefeated)</p>
                 <div class="record">
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Kulta</p>
                     </div>
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Hopea</p>
                     </div>
                     <div>
@@ -52,38 +52,36 @@
         <h2>Henkilökohtaiset tilastot</h2>
         <div class="stats-grid">
             <div class="stat">
-                <h3>Oluita juotu</h3>
-                <p>340</p>
-                <p>123 Putkitusta</p>
-                <p>200 100% tyhjennystä</p>
+                <h3>Vahvuudet</h3>
+                <p>100% tapahtumista ajallaan paikalla</p>
+                <p>Paineensietokyky top 3% maailmassa</p>
+                <p>Vaihdon aikainen steroidikuuri</p>
             </div>
             <div class="stat">
-                <h3>Golf statsit</h3>
-                <p>HCP 13,7</p>
-                <p>5 rautaa katkasistu</p>
-                <p>1200€ euroa käytetty vuoden aikana Green fee:hin</p>
+                <h3>Heikkoudet</h3>
+                <p>opinnäytetyö, jossa opiskelija hyödyntää kandidaattiopintojen aikana hankkimiansa tietoja ja taitoja rajatun ongelman ratkaisussa.</p>
+                <p></p>
+                <p></p>
             </div>
             <div class="stat">
-                <h3>Kämppä statsit</h3>
-                <p>12% lakanioden vaihto tehokkuus</p>
-                <p>1,2 miljoona hiekanjyvää huoneen lattialla</p>
-                <p>78% omistus asunnon jauhelihoista</p>
+                <h3>Ratakadun statsit</h3>
+                <p>20 jatkot järjestetty</p>
+                <p>1 pizza poltettu (palokunnan syy)</p>
+                <p>1 varastettu kasvi</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>1 Dokathlon tittelin puolustus</p>
-                <p>70% puolustustehokkuus Torstai Kallesta</p>
+                <p>Puolustus Ilarin servauksilta maailmanluokkaa</p>
+                <p>Puolustustehokkuus Torstai Kallesta noussut vaihdon jälkeen 30%</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
-                <p>13 Ubuntu konetta hallussa</p>
-                <p>40 043 riviä koodia kirjoitettu</p>
-                <p>400h CS2 pelattu</p>
+                <p>2 viikkoa asfalttitöitä</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>32% Dokathlonlajeista Top 3 sijoitus</p>
-                <p>100% lajeista humalassa</p>
+                <p>Ei mitään muistikuvaa</p>
+                <p>100% lajeista humalassa (oletus)</p>
             </div>
         </div>
     </section>
