--- a/P4Ppages/P4P9.html
+++ b/P4Ppages/P4P9.html
@@ -24,18 +24,18 @@
 
     <section class="fighter-profile">
         <div class="fighter-header">
-            <img src="../Kuvat/Heikki.png" alt="Fighter Image" class="fighter-image">
+            <img src="../Kuvat/Eltsu.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
-                <h2>Heikki Lintula</h2>
+                <h2>Elias Leikkonen</h2>
                 <h2>Golf Division</h2>
                 <p>25-1-0 (W-L-D)</p>
                 <div class="record">
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Kulta</p>
                     </div>
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Hopea</p>
                     </div>
                     <div>
@@ -58,32 +58,32 @@
                 <p>200 100% tyhjennystä</p>
             </div>
             <div class="stat">
-                <h3>Golf statsit</h3>
-                <p>HCP 13,7</p>
-                <p>5 rautaa katkasistu</p>
-                <p>1200€ euroa käytetty vuoden aikana Green fee:hin</p>
+                <h3>Kalle tilastot</h3>
+                <p>20 ihmistä saatu naamaVIP:illä sisään</p>
+                <p>1 henkilö heitetty ulos Kallesta</p>
+                <p>13 567€ käytetty Dansken kortilla Kalleen (ei ole töissä Danskella)</p>
             </div>
             <div class="stat">
-                <h3>Kämppä statsit</h3>
-                <p>12% lakanioden vaihto tehokkuus</p>
-                <p>1,2 miljoona hiekanjyvää huoneen lattialla</p>
-                <p>78% omistus asunnon jauhelihoista</p>
+                <h3>Viihdetilastot</h3>
+                <p>70% mahdoillisuus olla "ulkona" ke-la välisenä aikana</p>
+                <p>jatkoille selvitytmisprosentti 70%</p>
+                <p>loput 30% ke-la päivistä mökillä</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>1 Dokathlon tittelin puolustus</p>
-                <p>70% puolustustehokkuus Torstai Kallesta</p>
+                <p></p>
+                <p>0% puolustustehokkuus Torstai Kallesta</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
-                <p>13 Ubuntu konetta hallussa</p>
-                <p>40 043 riviä koodia kirjoitettu</p>
-                <p>400h CS2 pelattu</p>
+                <p>0,5 työtuntia perjantaisin</p>
+                <p>EY intern of the year 2023</p>
+
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>32% Dokathlonlajeista Top 3 sijoitus</p>
-                <p>100% lajeista humalassa</p>
+                <p>Heikko</p>
+                <p>Korvaa rapujuhlamenestyksellään</p>
             </div>
         </div>
     </section>
