--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="content">
             <p>Dokahtlon on historiallinen urheilujuhla, joka testaa osallistujien henkistä, fyysistä ja psyykkistä kestävyyttä 10 lajin muodossa. Lajit vaihtelevat vuosittain ja ovat tarkkaan varjeltu salaisuus, jotka kansainvälinen Dokathlonkomitea (IDSC) valitsee tarkasti. Onnittelut siis teille! Olette pääseet osaksi urheiluhistoriaa ja saaneet mahdollisuuden taistella maailman kunniotetuimmasta palkinnosta.</p>
-            <p>Tältä sivustolta löydätte tietoa Dokathlonista ja sen aikataulusta. Lisäksi voitte syventylä dokahtlonin pitkään ja juhlantäytteiseen historiaan.</p>
+            <p>Tältä sivustolta löydätte tietoa Dokathlonista ja sen aikataulusta. Lisäksi voitte syventylä dokahtlonin pitkään ja juhlantäytteiseen historiaan, sekä tarkastella tuloksia reaaliajassa.</p>
     
         </div>
     </div>
