--- a/about.html
+++ b/about.html
@@ -27,20 +27,20 @@
         <div class="content">
             <h2>Kilpailuviikonlopun aikataulu</h2>
             <h3>Pe 9.8</h3>
-            <p>Klo 16-</p>
+            <p><strong>Klo 16-</strong></p>
             <p>Saapuminen Vääksyyn, Omatoiminen asettautiminen, saunominen, ruokailu ja juhliminen</p>
             <h3>La 10.8</h3>
-            <p>Klo 9-12</p>
+            <p><strong>Klo 9-12</strong></p>
             <p>Dokahtlonin juhlallinen aloitus, Ensimmäiset 5 lajia aamupäivällä, jonka jälkeen Joni Pihlmanin loihtima pastatarjoilu.</p>
-            <p>Klo 13-17</p>
+            <p><strong>Klo 13-17</strong></p>
             <p>Lajien 6-10 suoritus</p>
-            <p>17-19</p>
+            <p><strong>Klo 17-19</strong></p>
             <p>Valmistautuminen illan palkintojen jakoon ja seremonialliseen rapujuhlaan</p>
-            <p>19-21</p>
+            <p><strong>Klo 19-21</strong></p>
             <p>Legendaariset rapujuhlat</p>
-            <p>21-?</p>
+            <p><strong>Klo 21-</strong></p>
             <h3>Su 11.8</h3>
-            <p>Klo 09-21</p>
+            <p><strong>Klo 9-21-</strong></p>
             <p>Herääminen</p>
         </div>
     </div>
